--- a/app/src/main/res/layout/activity_integral_order_details.xml
+++ b/app/src/main/res/layout/activity_integral_order_details.xml
@@ -62,7 +62,7 @@
                     <TextView
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
-                        android:text="产品单价"
+                        android:text="产品总价"
                         android:textColor="@color/app_txt_black"
                         android:textSize="14sp" />
 
@@ -175,6 +175,54 @@
 
 
                 <LinearLayout
+                    android:visibility="gone"
+                    android:id="@+id/lin_user_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/white"
+                    android:orientation="horizontal"
+                    android:paddingBottom="15dp"
+                    android:paddingTop="15dp">
+
+                    <TextView
+                        android:id="@+id/tv_user_name"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="收货人:"
+                        android:textColor="@color/app_txt_black"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/tv_phone"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/layout_left_right_interval"
+                        android:layout_weight="1"
+                        android:gravity="right"
+                        android:textColor="@color/app_txt_black"
+                        android:textSize="14sp"
+                        tools:text="18984955240" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:visibility="gone"
+                    android:id="@+id/tv_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/txt_name"
+                    android:background="@color/white"
+                    android:paddingBottom="10dp"
+                    android:paddingRight="@dimen/layout_left_right_interval"
+                    android:paddingTop="10dp"
+                    android:text="收货地址："
+                    android:textColor="@color/app_txt_black"
+                    android:textSize="14sp" />
+
+
+                <LinearLayout
                     android:id="@+id/lin_logisticscompany"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -219,7 +267,7 @@
                         android:id="@+id/tv_logisticscode"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/app_txt_red"
+                        android:textColor="@color/app_txt_black"
                         android:textSize="14sp"
                         tools:text="产品名称" />
 
