--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -25,6 +25,7 @@
                 android:orientation="vertical">
 
                 <com.youth.banner.Banner
+                    android:id="@+id/banner_product"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/product_details_banner_height"
                     banner:delay_time="4000"
@@ -33,17 +34,19 @@
                 <!--android:ellipsize="end"-->
                 <!--android:maxLines="4"-->
                 <TextView
+                    android:id="@+id/tv_product_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:paddingLeft="@dimen/layout_left_interval"
                     android:progress="@dimen/layout_right_interval"
-                    android:text="一个很好的商品一个很好的商一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品品一个很好的商品一个很好的商品品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品一个很好的商品品一个很好的商品一个很好的商品"
+                    tools:text="商品"
                     android:textColor="@color/app_txt_black"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tv_slogan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -51,7 +54,7 @@
                     android:maxLines="2"
                     android:paddingLeft="@dimen/layout_left_interval"
                     android:paddingRight="@dimen/layout_right_interval"
-                    android:text="你的好选择你的好选择"
+                    tools:text="你的好选择你的好选择"
                     android:textColor="@color/app_txt_gray"
                     android:textSize="14sp" />
 
@@ -70,13 +73,15 @@
                         android:textSize="14sp" />
 
                     <TextView
+                        android:id="@+id/tv_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="49.00"
+                        tools:text="49.00"
                         android:textColor="@color/app_txt_red"
                         android:textSize="16sp" />
 
                     <TextView
+                        android:id="@+id/tv_sell_num"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="15dp"
@@ -116,6 +121,7 @@
                 <View style="@style/style_split_line" />
 
                 <WebView
+                    android:id="@+id/webView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="30dp"
