--- a/app/src/main/res/layout/layout_score.xml
+++ b/app/src/main/res/layout/layout_score.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        app:clickable="true"
+        app:clickable="false"
         app:halfstart="false"
         app:starCount="5"
         app:starEmpty="@drawable/star_empty"
@@ -40,10 +40,11 @@
         android:layout_weight="1" />
 
     <TextView
+        android:id="@+id/tv_commetns"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:text="42条评论"
+        tools:text="42条评论"
         android:textColor="@color/app_txt_black"
         android:textSize="14sp" />
 
