--- a/app/src/main/res/layout/activity_appointment_order.xml
+++ b/app/src/main/res/layout/activity_appointment_order.xml
@@ -1,68 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/bg_gray"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/llayout_trip"
             android:layout_width="match_parent"
-            android:layout_height="42dp"
-            android:background="@drawable/selector_gray"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:background="@color/bg_gray"
+            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:text="下单数量"
-                android:textColor="@color/app_txt_black"
-                android:textSize="14sp" />
+            <include
+                android:id="@+id/layout_address"
+                layout="@layout/layout_address_info" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_weight="1"
-                android:text="选择数量"
-                android:textColor="@color/app_txt_gray"
-                android:textSize="14sp" />
+            <LinearLayout
+                android:id="@+id/llayout_trip"
+                android:layout_width="match_parent"
+                android:layout_height="42dp"
+                android:background="@drawable/selector_gray"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/img_trip"
-                android:layout_width="12dp"
-                android:layout_height="12dp"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:text="下单数量"
+                    android:textColor="@color/app_txt_black"
+                    android:textSize="14sp" />
+
+                <EditText
+                    android:id="@+id/edit_quantity"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="15dp"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:inputType="number"
+                    android:maxLength="5"
+                    android:text="1"
+                    android:textColor="@color/app_txt_black"
+                    android:textSize="14sp" />
+
+                <ImageView
+                    android:id="@+id/img_trip"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:layout_marginRight="@dimen/layout_right_interval"
+                    android:src="@drawable/more_right"
+                    android:visibility="gone" />
+
+
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/edit_applyNote"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
+                android:gravity="top"
+                android:hint="下单说明"
+                android:paddingLeft="@dimen/layout_left_interval"
+                android:paddingRight="@dimen/layout_right_interval"
+                android:paddingTop="15dp"
+                android:textSize="13sp" />
+
+            <Button
+                android:id="@+id/btn_sure_order"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/button_height"
+                android:layout_marginLeft="@dimen/layout_left_interval"
                 android:layout_marginRight="@dimen/layout_right_interval"
-                android:src="@drawable/more_right" />
+                android:layout_marginTop="40dp"
+                android:background="@drawable/btn_select_common"
+                android:text="确定下单"
+                android:textColor="@color/white" />
 
 
         </LinearLayout>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:background="@color/white"
-            android:gravity="top"
-            android:hint="下单说明"
-            android:paddingLeft="@dimen/layout_left_interval"
-            android:paddingRight="@dimen/layout_right_interval"
-            android:paddingTop="15dp"
-            android:textSize="13sp" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/button_height"
-            android:layout_marginLeft="@dimen/layout_left_interval"
-            android:layout_marginRight="@dimen/layout_right_interval"
-            android:layout_marginTop="40dp"
-            android:background="@drawable/btn_select_common"
-            android:text="确定下单"
-            android:textColor="@color/white" />
-
-
-    </LinearLayout>
+    </ScrollView>
 </layout>
