--- a/app/src/main/res/layout/layout_score.xml
+++ b/app/src/main/res/layout/layout_score.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,6 +14,7 @@
     tools:showIn="@layout/activity_shopper_appointment">
 
     <com.cdkj.myxb.weight.views.MyRatingBar
+        android:id="@+id/ratingbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
@@ -40,13 +41,13 @@
         android:layout_weight="1" />
 
     <TextView
-        android:id="@+id/tv_commetns"
+        android:id="@+id/tv_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        tools:text="42条评论"
         android:textColor="@color/app_txt_black"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        tools:text="42条评论" />
 
 
     <ImageView
@@ -55,5 +56,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="@dimen/layout_right_interval"
         android:src="@drawable/more_right" />
+
+
 
 </LinearLayout>
