--- a/app/src/main/res/layout/activity_comments_edit.xml
+++ b/app/src/main/res/layout/activity_comments_edit.xml
@@ -7,6 +7,15 @@
         android:background="@color/bg_gray"
         android:orientation="vertical">
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView_comments"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:visibility="gone">
+
+        </android.support.v7.widget.RecyclerView>
+
         <EditText
             android:id="@+id/edit_info"
             android:layout_width="match_parent"
