--- a/app/src/main/res/layout/item_comments.xml
+++ b/app/src/main/res/layout/item_comments.xml
@@ -4,38 +4,73 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
     android:background="@color/white"
-    android:paddingBottom="10dp"
-    android:paddingTop="10dp">
+    android:orientation="vertical"
+    android:paddingBottom="15dp"
+    android:paddingLeft="@dimen/layout_left_interval"
+    android:paddingRight="@dimen/layout_right_interval"
+    android:paddingTop="15dp">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:src="@drawable/my_logo" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="15dp"
+                android:textColor="@color/app_txt_black"
+                android:textSize="14sp"
+                tools:text="2018-02-07" />
+
+            <com.cdkj.myxb.weight.views.MyRatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                app:clickable="true"
+                app:halfstart="false"
+                app:starCount="5"
+                app:starEmpty="@drawable/star_empty"
+                app:starFill="@drawable/star_full"
+                app:starImageHeight="18dp"
+                app:starImagePadding="5dp"
+                app:starImageWidth="18dp" />
+
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/app_txt_gray"
+            android:textSize="12sp"
+            tools:text="2018-02-07" />
+
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/tv_commetns"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:lineSpacingExtra="4dp"
         android:textColor="@color/app_txt_black"
         android:textSize="14sp"
-        tools:text="42条评论" />
-
-
-    <com.cdkj.myxb.weight.views.MyRatingBar
-        android:id="@+id/ratingbar_comments"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="20dp"
-        app:clickable="true"
-        app:halfstart="false"
-        app:starCount="5"
-        app:starEmpty="@drawable/star_empty"
-        app:starFill="@drawable/star_full"
-        app:starImageHeight="25dp"
-        app:starImagePadding="8dp"
-        app:starImageWidth="25dp"
-        app:starNum="0" />
-
+        tools:text="效果很好效果很好效果很好效果很好效果很好效果很好效果很好效果很好效果很好" />
 </LinearLayout>
