--- a/app/src/main/res/layout/item_brand_firstpage.xml
+++ b/app/src/main/res/layout/item_brand_firstpage.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:scaleType="centerCrop"
-            tools:src="@drawable/default_pic" />
+            android:src="@drawable/default_pic" />
 
 
     </FrameLayout>
@@ -34,7 +34,7 @@
         android:maxLines="2"
         android:textColor="@color/app_txt_black"
         android:textSize="16sp"
-        tools:text="sdfsdfsdfsfsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsfd" />
+        android:text="sdfsdfsdfsfsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsdfsdfsdfsfsfdsfdsfd" />
 
 
 </LinearLayout>
