--- a/cdcommon/src/main/res/layout/empty_view.xml
+++ b/cdcommon/src/main/res/layout/empty_view.xml
@@ -16,13 +16,13 @@
             android:id="@+id/img"
             android:layout_width="105dp"
             android:layout_height="105dp"
+            android:layout_marginBottom="20dp"
             tools:src="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="23dp"
             android:maxLength="100"
             android:textColor="@color/text_color"
             android:textSize="16sp"
