--- a/app/src/main/res/layout/item_shopper_appointment.xml
+++ b/app/src/main/res/layout/item_shopper_appointment.xml
@@ -57,7 +57,7 @@
                             tools:text="王二小" />
 
                         <ImageView
-                            android:id="@+id/tv_gender"
+                            android:id="@+id/img_gender"
                             android:layout_width="16dp"
                             android:layout_height="16dp"
                             android:layout_gravity="center_vertical"
@@ -92,7 +92,7 @@
                     android:paddingTop="5dp"
                     android:text="@string/can_appointment"
                     android:textColor="@color/white"
-                    android:textSize="15sp" />
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
