--- a/app/src/main/res/layout/layout_mypage_boos.xml
+++ b/app/src/main/res/layout/layout_mypage_boos.xml
@@ -32,7 +32,7 @@
             android:layout_marginLeft="15dp" />
 
         <com.cdkj.baselibrary.views.RowInfoLayout
-            android:id="@+id/row_my_order"
+            android:id="@+id/row_my_appointment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:img_left="@drawable/my_results"
