--- a/app/src/main/res/layout/activity_shopper_appointment.xml
+++ b/app/src/main/res/layout/activity_shopper_appointment.xml
@@ -101,19 +101,45 @@
 
                 <View style="@style/style_split_line" />
 
-                <WebView
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginLeft="@dimen/layout_left_interval"
-                    android:layout_marginRight="@dimen/layout_right_interval">
+                    android:layout_height="0dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_weight="1"
+                    android:background="@color/white"
+                    android:orientation="vertical">
 
+                    <WebView
+                        android:id="@+id/webView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="15dp"
+                        android:layout_marginLeft="@dimen/layout_left_interval"
+                        android:layout_marginRight="@dimen/layout_right_interval">
 
-                </WebView>
+                    </WebView>
+
+                </LinearLayout>
 
                 <include
                     android:id="@+id/score_layout"
                     layout="@layout/layout_score" />
+
+                <View style="@style/style_split_line" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recyclerView_comments"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+
+                    </android.support.v7.widget.RecyclerView>
+
+                </RelativeLayout>
 
 
             </LinearLayout>
@@ -128,6 +154,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/call_phone"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -150,10 +177,10 @@
 
             </LinearLayout>
 
-            <TextView
+            <Button
+                android:id="@+id/btn_to_apppintment"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
                 android:layout_weight="2"
                 android:background="@drawable/selector_title_color"
                 android:gravity="center"
