--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,8 +2,8 @@
 
     <dimen name="banner_height">185dp</dimen>
     <dimen name="app_btn_radius">20dp</dimen>
-    <dimen name="shopper_logo_width">80dp</dimen>
-    <dimen name="shopper_logo_height">80dp</dimen>
+    <dimen name="shopper_logo_width">95dp</dimen>
+    <dimen name="shopper_logo_height">95dp</dimen>
     <dimen name="shopper_lable_txt_size">12sp</dimen>
     <dimen name="advice_ratingbar_width">12.5dp</dimen>
     <dimen name="advice_ratingbar_height">12.5dp</dimen>
@@ -12,4 +12,5 @@
     <dimen name="product_details_banner_height">350dp</dimen>
     <dimen name="product_bottom_height">50dp</dimen>
     <dimen name="product_title_margintop">5dp</dimen>
+    <dimen name="appointment_rad">15dp</dimen>
 </resources>
