--- a/cdcommon/src/main/res/layout/activity_tab.xml
+++ b/cdcommon/src/main/res/layout/activity_tab.xml
@@ -2,9 +2,9 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tablayout"
